post,put delete methods implemented

--- a/CaseStudySBA/BusinessLogic/App.Config
+++ b/CaseStudySBA/BusinessLogic/App.Config
@@ -5,8 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    
-  <add name="CaseStudySBAEntities" connectionString="metadata=res://*/Gym.csdl|res://*/Gym.ssdl|res://*/Gym.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sqlexpress;initial catalog=CaseStudySBA;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+ <add name="CaseStudySBAEntities" connectionString="metadata=res://*/GymTrack.csdl|res://*/GymTrack.ssdl|res://*/GymTrack.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sqlexpress;initial catalog=CaseStudySBA;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
