--- a/CaseStudySBA/BusinessLogic.Tests/BusinessLogic.Tests.csproj
+++ b/CaseStudySBA/BusinessLogic.Tests/BusinessLogic.Tests.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CategoryRepoTest.cs" />
+    <Compile Include="CustomException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
