--- a/CaseStudySBA/Service/Web.config
+++ b/CaseStudySBA/Service/Web.config
@@ -14,7 +14,7 @@
     <httpRuntime targetFramework="4.5.2" />
   </system.web>
   <connectionStrings>
-    <add name="CaseStudySBAEntities" connectionString="metadata=res://*/Gym.csdl|res://*/Gym.ssdl|res://*/Gym.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sqlexpress;initial catalog=CaseStudySBA;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="CaseStudySBAEntities" connectionString="metadata=res://*/GymTrack.csdl|res://*/GymTrack.ssdl|res://*/GymTrack.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sqlexpress;initial catalog=CaseStudySBA;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   
   <runtime>
